--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@
     margin: 0;
     padding: 0;
 }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 
 body {
     background-color: blueviolet;
+    font-family: "Roboto", sans-serif;
 }
 
 h1 {
@@ -13,4 +16,10 @@ h1 {
 
 h2 {
     color: whitesmoke;
+}
+
+.caja {
+    width: 100%;
+    background-color: white;
+    color: blueviolet;
 }
